New abstraction to BaseIncomingDataHandler based around the "operation" key in incoming data