@@ -4,8 +4,10 @@ import com.bots.RacoonServer.SocketCommunication.TrafficManager;
 import com.bots.RacoonShared.Discord.Channel;
 import com.bots.RacoonShared.Discord.ServerChannels;
 import com.bots.RacoonShared.IncomingDataHandlers.BaseIncomingDataTrafficHandler;
+import com.bots.RacoonShared.IncomingDataHandlers.IncomingOperationHandler;
 import com.bots.RacoonShared.Logging.Loggers.Logger;
 import com.bots.RacoonShared.SocketCommunication.SocketCommunicationOperationBuilder;
+import com.bots.RacoonShared.SocketCommunication.SocketOperationIdentifiers;
 import com.bots.RacoonShared.Util.SerializationUtil;
 import net.dv8tion.jda.api.JDA;
 import net.dv8tion.jda.api.entities.Guild;
@@ -13,49 +15,42 @@ import org.json.JSONObject;
 
 import java.io.IOException;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.stream.Collectors;
 
-public class ServerChannelRequestHandler extends BaseIncomingDataTrafficHandler {
+public class ServerChannelRequestHandler extends IncomingOperationHandler {
     private final JDA jda;
     private final TrafficManager trafficManager;
     private final Logger logger;
 
     public ServerChannelRequestHandler(JDA jda, TrafficManager trafficManager, Logger logger) {
+        super(SocketOperationIdentifiers.REQUEST_SERVER_CHANNEL_LIST);
         this.jda = jda;
         this.trafficManager = trafficManager;
         this.logger = logger;
     }
 
     @Override
-    public void handle(JSONObject data) {
-        if (data.get("operation").equals("requestServerChannels")) {
-            LinkedList<ServerChannels> out = new LinkedList<>();
-            for (Guild guild: jda.getGuilds()) {
-                out.add(new ServerChannels(
-                        guild.getId(),
-                        guild.getName(),
-                        guild.getTextChannels().stream().map(
-                                textChannel -> new Channel(textChannel.getId(), textChannel.getName()))
-                                .collect(Collectors.toList())
-                ));
-            }
+    public void consume(JSONObject data) {
+        LinkedList<ServerChannels> serverChannelsList = jda.getGuilds().stream().map(guild -> {
+            List<Channel> channels = guild.getTextChannels().stream().map(
+                    textChannel -> new Channel(textChannel.getId(), textChannel.getName())
+            ).toList();
 
-            try {
-                SocketCommunicationOperationBuilder builder =
-                        new SocketCommunicationOperationBuilder()
-                                .setData(new JSONObject()
-                                        .put("operation", "setServerChannelList")
-                                        .put("body", SerializationUtil.toString(out)));
-                trafficManager.queueOperation(
-                        trafficManager.getConnection(data.getInt("connection_id")),
-                        builder.build()
-                );
-            } catch (IOException e) {
-                logger.logError(
-                        getClass().getName(),
-                        e.toString()
-                );
-            }
-        } else super.handle(data);
+            return new ServerChannels(guild.getId(), guild.getName(), channels);
+        }).collect(Collectors.toCollection(LinkedList::new));
+
+        JSONObject outData;
+        try {
+            outData = new JSONObject()
+                    .put("operation", SocketOperationIdentifiers.UPDATE_SERVER_CHANNEL_LIST)
+                    .put("body", SerializationUtil.toString(serverChannelsList));
+        } catch (IOException e) {
+            logger.logError(getClass().getName(), e.toString());
+            return;
+        }
+
+        SocketCommunicationOperationBuilder builder = new SocketCommunicationOperationBuilder().setData(outData);
+        trafficManager.queueOperation(trafficManager.getConnection(data.getInt("connection_id")), builder.build());
     }
 }
